[project]
name = "modus-intel"
version = "0.1.0"
description = "Autonomous Threat Intelligence & IOC Enrichment Engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AtlasDFIR" }]
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
modus-intel = "modus_intel.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]